--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,14 @@ pip-log.txt
 
 venv
 *.pyc
+
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
