updates to front end and back end

--- a/src/static/package.json
+++ b/src/static/package.json
@@ -31,10 +31,16 @@
   },
   "homepage": "https://github.com/vcsawant/Bughouse#readme",
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "create-react-class": "^15.6.3",
+    "formsy-react": "^1.1.4",
+    "material-ui": "^0.20.2",
     "prettier": "^1.14.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
